<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_regresar"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:text="@string/regresar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_puntoss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/puntuacion"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_puntos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginLeft="5dp"
            android:text="0"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/title_operacion_m"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/text_operando1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/operando1"
        android:textSize="50sp"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_operando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando_m"
            android:textSize="50sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_operando2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operando2"
            android:textSize="50sp"
            android:textColor="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="250dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/resultado"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:layout_rowSpan="3"
        android:layout_marginStart="10dp"
        android:paddingEnd="10dp"
        android:columnCount="5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cero"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="0"
            android:textSize="24sp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/button_uno"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="1"
            android:textSize="24sp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/button_dos"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="2"
            android:textSize="24sp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/button_tres"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="3"
            android:textSize="24sp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/button_cuatro"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="4"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_cinco"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="5"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_seis"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="6"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_siete"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="7"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_ocho"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="8"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_nueve"
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="9"
            android:textSize="24sp" />

    </GridLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_borrar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="borrar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_revisar"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp"
            android:text="@string/revisar"
            android:textSize="20sp"
            android:backgroundTint="@color/blue"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>